--- a/staRt/www/states/root/tutorial/_tutorial_styles.scss
+++ b/staRt/www/states/root/tutorial/_tutorial_styles.scss
@@ -52,12 +52,13 @@
 		text-align: left;
 		width: 100%;
 		height: auto;
+		padding-left: 15px;
 		padding-bottom: 1em;
 		//border: 1px solid lightBlue;
 	}
 
 	.tut-bgImg {
-		height: 100%;
+		height: 90%;
 		width: 100%;
 		position: absolute;
 		top: 0px;
@@ -68,55 +69,17 @@
 	}
 
 	.tut-bgImg--dim {
-		opacity: 0.1;
+		opacity: 0.25;
 	}
 
-	// .tutNoWave-content {
-	// 	display: flex;
-	// 	flex-direction: column;
-	// 	flex-wrap: nowrap;
-	// 	align-items: flex-start;
-	// 	justify-content: space-between;
-	// 	height: 100%;
-	// 	//border: 1px solid orange;
+	// IMPORTS THE INDIVIDUAL TUTORIAL TEMPLATE LAYOUTS (flexbox setups)
+	@import 'sceneStyles/waveNone';
+	@import 'sceneStyles/waveSingle';
+	@import 'sceneStyles/waveDouble';
 
-	// 	.noWaveBox {
-	// 		display: flex;
-	// 		flex-direction: column;
-	// 		align-items: flex-start;
-	// 		justify-content: space-around;
-	// 		width: 60%;
-	// 		height: auto;
-	// 		padding: 10px 0;
-	// 		//height: $rowH * 3;
-	// 		//border: 1px solid lime;
-	// 	}
 
-	// 	.noWaveRow {
-	// 		display: flex;
-	// 		flex-direction: row;
-	// 		flex-wrap: nowrap;
-	// 		justify-content: flex-start;
-	// 		align-items: flex-start;
-	// 		text-align: left;
-	// 		width: 100%;
-	// 		margin: 10px 0; //#hc
-	// 		//border: 1px solid green;
-
-	// 		.noWave3 {
-	// 			//border: 1px solid green;
-	// 			width: 50%;
-	// 		}
-
-	// 	} //end .noWaveRow
-
-	// 	.charImg {
-	// 		position: absolute;
-	// 		//border: 1px solid pink;
-	// 	}
-	// } // end .tutNoWave-content
-
-	.tutSingleWave-content {
+	// STYLES THE WAVE CONTENT COMMON TO ALL LAYOUTS
+	.tutWave-content {
 		// should be identical to .tutNoWave-content w/ the exception of flex-direction
 		display: flex;
 		flex-direction: row;
@@ -144,70 +107,96 @@
 			}
 
 			.wave1 {
-				// padding: 10px;
-				// padding-top: 20px;
+				margin-bottom: 15px;
+				//border: 1px solid orange;
+			}
+
+			.waveFrame {
+				position: relative;
+				top: 0;
+				left: 0;
+				height: 170px;
+				width: 500px;
+				//padding: 10px;
+				background-color: $blue-white;
+				border: 10px solid $blue-white;
+				border-radius: 10px;
+				box-shadow: $itemShadow;
+				z-index: 1;
+				//border: 1px solid lime;
+			} // end waveFrame
+
+
 			// just a container
-				.waveFrame {
-					height: 190px;
-					width: 500px;
-					background-color: $blue-white;
-					border-radius: 10px;
-					box-shadow: $itemShadow;
-
-					.lpcBox {
-						margin: 10px;
-						height: 170px;
-						width: 480px;
-						border-radius: 10px;
-						background-color: $blue-light;
-						//border: 1px solid red;
-					}
-					
-					.waveFrame-label {
-						position: relative;
-						margin: 10px;
-						top: - 190px;
-						left: - 0px;
-						height: auto;
-						padding: 7px 15px;
-						width: 225px;
-						margin: 0 auto;
-						background-color: $blue-white;
-						border-radius: 10px;
-						text-align: center;
-
-						.waveFrame-label--txt {
-							font-size: 0.65em;
-							line-height: 1em;
-						}
-						.waveFrame-label--title {
-							font-size: 0.65em;
-							font-weight: bold;
-						}
-					} // end .waveFrame-label
-
-				} // end waveFrame
+			.lpcBox {
+				height: 150px;
+				width: 480px;
+				margin: auto;
+				border-radius: 10px;
+				background-color: $blue-light;
+				z-index: 5;
+				//border: 1px solid red;
 			}
+			.soundImgBox {
+				position: relative;
+				margin:0;
+				padding: 0;
+				height: 150px;
+				background-size: 100% auto;
+				width: 480px;
+				border-radius: 10px;
+				//border: 1px solid lime;
+			}
+
+			.waveFrame-label {
+				position: relative;
+				margin: 10px;
+				top: -155px;
+				//left: 137.5px;
+				height: auto;
+				width: 225px;
+				padding: 7px 15px;
+				margin: 0 auto;
+				background-color: $blue-white;
+				border-radius: 10px;
+				text-align: center;
+				z-index: 10;
+				//border: 1px solid lime;
+
+				.waveFrame-label--txt {
+					font-size: 0.65em;
+					line-height: 1em;
+				}
+				.waveFrame-label--title {
+					font-size: 0.65em;
+					font-weight: bold;
+				}
+			} // end .waveFrame-label
+
 			.leftRow2 {
-				padding-top: 20px;
-
-
+				padding: 0 20px;
+				width: 500px;
+				//border: 1px solid lime;
 			}
+
 			.leftRow3 {
 				flex-direction: column;
-
 			}
 		}
 
+
 		.rightBox {
+			position: relative;
 			display: flex;
 			flex-direction: column;
+			justify-content: space-between;
 			height: 100%;
 			width: 33%;
-			padding-top: 0px;
+			padding-top: 10px;
 			//border: 1px solid orange;
 			
 			.rightRow1 {
+				position: relative;
 				display: flex;
 				flex-direction: row;
 				min-height: 25px;
@@ -216,10 +205,9 @@
 			}
 
 			.starBox {
-				position: absolute;
+				position: relative;
 				height: 265px;
 				width: 265px;
-				top: $rowH * 2;
 				//border: 1px solid lightBlue;
 			}
 
@@ -235,69 +223,69 @@
 	} // end .tutPgView-content
 
 
-	.tutPgView-content {
-		// should be identical to .tutNoWave-content w/ the exception of flex-direction
-		display: flex;
-		flex-direction: row;
-		flex-wrap: nowrap;
-		align-items: flex-start;
-		justify-content: space-between;
-		height: 100%;
-		//border: 1px solid orange;
+	// .tutPgView-content {
+	// 	// should be identical to .tutNoWave-content w/ the exception of flex-direction
+	// 	display: flex;
+	// 	flex-direction: row;
+	// 	flex-wrap: nowrap;
+	// 	align-items: flex-start;
+	// 	justify-content: space-between;
+	// 	height: 100%;
+	// 	//border: 1px solid orange;
 
-		.leftBox {
-			display: flex;
-			flex-direction: column;
-			height: 100%;
-			width: 65%;
-			//border: 1px solid lightBlue;
+	// 	.leftBox {
+	// 		display: flex;
+	// 		flex-direction: column;
+	// 		height: 100%;
+	// 		width: 65%;
+	// 		//border: 1px solid lightBlue;
 			
-			.leftRow {
-				display: flex;
-				flex-direction: row;
-				flex-wrap: nowrap;
-				align-items: flex-start;
-				height: 10%;
-				//border: 1px solid lightBlue;
-			}
+	// 		.leftRow {
+	// 			display: flex;
+	// 			flex-direction: row;
+	// 			flex-wrap: nowrap;
+	// 			align-items: flex-start;
+	// 			height: 10%;
+	// 			//border: 1px solid lightBlue;
+	// 		}
 
-			.leftRow1 {
+	// 		.leftRow1 {
 
-			}
-			.leftRow2 {
+	// 		}
+	// 		.leftRow2 {
 
-			}
-			.leftRow3 {
-				flex-direction: column;
+	// 		}
+	// 		.leftRow3 {
+	// 			flex-direction: column;
 
-			}
-		}
+	// 		}
+	// 	}
 
-		.rightBox {
-			display: flex;
-			flex-direction: column;
-			height: 100%;
-			width: 33%;
-			//border: 1px solid orange;
+	// 	.rightBox {
+	// 		display: flex;
+	// 		flex-direction: column;
+	// 		height: 100%;
+	// 		width: 33%;
+	// 		border: 1px solid orange;
 			
-			.rightRow1 {
-				display: flex;
-				flex-direction: row;
-				min-height: 25px;
-				width: 100%;
-				//border: 1px solid lightBlue;
-			}
+	// 		.rightRow1 {
+	// 			display: flex;
+	// 			flex-direction: row;
+	// 			min-height: 25px;
+	// 			width: 100%;
+	// 			//border: 1px solid lightBlue;
+	// 		}
 
-			.starBox {
-				position: absolute;
-				height: 265px;
-				width: 267px;
-				top: $rowH * 2;
-				//border: 1px solid yellow;
-			}
-		}
+	// 		.starBox {
+	// 			//position: relative;
+	// 			height: 265px;
+	// 			width: 267px;
+	// 			//top: $rowH * 2;
+	// 			border: 1px solid yellow;
+	// 		}
+	// 	}
 
-	} // end .tutPgView-content
+	// } // end .tutPgView-content
 
 
 .inputBox {
@@ -334,77 +322,34 @@ button.tutBtn, a.tutBtn {
 	//border: 1px solid red;
 }
 
-ion-slide-page {
-	z-index: 99;
-}
+
+// --------------------------------------------
+// IMPORTS THE SANDBAR STYLES
+	@import 'sceneStyles/sandbar';
 
 
-.swiper-slide {
-	border: 1px solid pink;
-}
+// --------------------------------------------
+// INDIVIDUAL PAGE STYLES
+	/* typography
+		.txtBold 
+		.txtBold-blue
+		.txtBold-blueDark
+		.txtBold-blueLight
+	*/
 
-
-// SANDBAR -------------------------------------
-
-	.sandbarBox {
-		position: relative;
-		height: $rowH * 2;
-		width: $appW;
-		top: $rowH * 4;
-		display: flex;
-		flex-direction: column;
-		z-index: 1;
-		background-image: url("../img/tutorial/sand.svg");
-		background-size: auto 100%;
-		//border: 1px solid lime;
-	}
-
-	.sandbar-coinRow {
-		position: relative;
-		display: inline-flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: space-between;
-		flex-wrap: nowrap;
-		height: 100%;
-		margin-left: $navW;
-		width: $appW - $navW - $col-pad;
-		z-index: 25;
-		//border: 1px solid orange;
-	}
-
-	.sandbar-coinBox {
-		align-self: flex-start;
-		display: flex;
-		flex-direction: column;
-		padding: 0px 10px;
-		height: 100%;
-
-		z-index: 25;
-		border: 1px solid white;
-	}
-
-	.sandbar-coinImgBox {
-		height: 60px; //64%; //64%; //100%; //
-		// height: $rowHalf; //		#hc need a var for nav icon size
-		width: auto;
-		border: 1px solid aqua;
-	}
-
-	.sandbar-coinImg {
+	// p01s1
+	.img-hello {
 
 	}
 
-	.sandbar-coinTxt {
-		margin-top: 5px;
+	.txt-boldBlueDark--try {
+		font-weight: $bold;
+		color: $blue-dark;
+		font-size: 1.5em;
 	}
 
-	.activeCoin {
+	.txt-squish {
+		line-height: 0.5;
 		color: red;
-		font-weight: bold;
 	}
 
-// IMPORTS THE INDIVIDUAL TEMPLATE STYLES
-@import 'sceneStyles/waveNone';
-@import 'sceneStyles/waveSingle';
-@import 'sceneStyles/waveDouble';
