--- a/staRt/www/states/root/tutorial/sceneStyles/_waveNone.scss
+++ b/staRt/www/states/root/tutorial/sceneStyles/_waveNone.scss
@@ -13,9 +13,9 @@
 		align-items: flex-start;
 		justify-content: space-around;
 		width: 60%;
-		height: auto;
-		padding: 10px 0;
-		//height: $rowH * 3;
+		//height: $rowH * 3.33;
+		padding: 0;
+		margin: 0;
 		//border: 1px solid lime;
 	}
 
@@ -27,11 +27,15 @@
 		align-items: flex-start;
 		text-align: left;
 		width: 100%;
-		margin: 10px 0; //#hc
+		padding: 0;
+		padding-left: 20px;
+		margin-bottom: 10px;
 		//border: 1px solid green;
 
+
+
 		.noWave3 {
-			//border: 1px solid green;
+			border: 1px solid green;
 			width: 50%;
 		}
 	} //end .noWaveRow
