--- a/staRt/www/states/root/tutorial/_tutorial_styles.scss
+++ b/staRt/www/states/root/tutorial/_tutorial_styles.scss
@@ -322,6 +322,12 @@ button.tutBtn, a.tutBtn {
 	//border: 1px solid red;
 }
 
+#lpc-canvas {
+	position: relative;
+	height: 150px;
+	width: 480px;
+	border: 1px solid red;
+}
 
 // --------------------------------------------
 // IMPORTS THE SANDBAR STYLES
