--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -7,10 +7,25 @@ lpc-directive {
 
 #lpc-canvas { /* This is the THREEjs element*/
 	width: 100%;
-	height: 100%;
+	height: 150px;
 	margin: auto;
 	z-index: 10;
+	//border: 1px solid red;
 }
+
+.lpcCanvasSize-big { // not working
+	width: 780px;
+	height: 380px;
+	border: 1px solid lime;
+}
+
+.lpcCanvasSize-tutorial {  // not working
+	width: 480px;
+	height: 150px;
+	border: 1px solid red;
+}
+
+
 
 .lpc-container {  /* This is the light blue box*/
 	position: relative;
