--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -472,17 +472,6 @@ input[type=range]::-webkit-slider-thumb {
   width: 100vw;
   margin-top: 13.87143vh; }
 
-.state-contentBox, .state-contentBox--wide {
-  padding: 0;
-  margin: 0;
-  display: -webkit-flex;
-  -webkit-flex: 1;
-  margin-top: 6.93571vh;
-  margin-left: 16.66vw;
-  height: auto;
-  width: 76.68vw;
-  font-size: 1rem; }
-
 .state-contentBox--wide {
   margin-left: 0;
   padding: 0;
@@ -780,13 +769,6 @@ button.tutBtn, a.tutBtn {
   background-color: #53c8e9;
   z-index: 99; }
 
-.lpc1 {
-  position: absolute;
-  top: 5.89536vh;
-  left: 0;
-  height: 215px;
-  width: 490px; }
-
 .sandbarBox {
   position: relative;
   height: 27.74286vh;
@@ -883,9 +865,19 @@ lpc-directive {
 #lpc-canvas {
   /* This is the THREEjs element*/
   width: 100%;
-  height: 100%;
+  height: 150px;
   margin: auto;
   z-index: 10; }
+
+.lpcCanvasSize-big {
+  width: 780px;
+  height: 380px;
+  border: 1px solid lime; }
+
+.lpcCanvasSize-tutorial {
+  width: 480px;
+  height: 150px;
+  border: 1px solid red; }
 
 .lpc-container {
   /* This is the light blue box*/
