--- a/staRt/www/states/root/tutorial/_tutorial_styles.scss
+++ b/staRt/www/states/root/tutorial/_tutorial_styles.scss
@@ -73,7 +73,7 @@
 	}
 
 	// IMPORTS INDIVIDUAL TUTORIAL TEMPLATE LAYOUTS (flexbox setups)
-	@import 'partialStyles/waveNone';
+	@import 'partialStyles/noWave';
 
 
 	// STYLES THE WAVE CONTENT COMMON TO ALL LAYOUTS
