--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -7,21 +7,21 @@ lpc-directive {
 
 #lpc-canvas { /* This is the THREEjs element*/
 	width: 100%;
-	height: 150px;
+	height: 100%;
 	margin: auto;
 	z-index: 10;
-	//border: 1px solid red;
+	border: 1px solid red;
 }
 
 .lpcCanvasSize-big { // not working
-	width: 780px;
-	height: 380px;
+	// width: 780px;
+	// height: 380px; //#hc
 	border: 1px solid lime;
 }
 
 .lpcCanvasSize-tutorial {  // not working
-	width: 480px;
-	height: 150px;
+	// width: 480px;
+	// height: 150px; //#hc
 	border: 1px solid red;
 }
 
