--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -891,18 +891,15 @@ lpc-directive {
 #lpc-canvas {
   /* This is the THREEjs element*/
   width: 100%;
-  height: 150px;
+  height: 100%;
   margin: auto;
-  z-index: 10; }
+  z-index: 10;
+  border: 1px solid red; }
 
 .lpcCanvasSize-big {
-  width: 780px;
-  height: 380px;
   border: 1px solid lime; }
 
 .lpcCanvasSize-tutorial {
-  width: 480px;
-  height: 150px;
   border: 1px solid red; }
 
 .lpc-container {
