tinkering w/ wave resize code

--- a/staRt/www/states/root/tutorial/_tutorial_styles.scss
+++ b/staRt/www/states/root/tutorial/_tutorial_styles.scss
@@ -136,6 +136,7 @@
 				z-index: 5;
 				//border: 1px solid lime;
 			}
+
 			.soundImgBox {
 				position: relative;
 				margin:0;
@@ -271,7 +272,7 @@ button.tutBtn, a.tutBtn {
 
 
 // --------------------------------------------
-// INDIVIDUAL PAGE STYLES
+// TYPOGRAPHY & IMG
 	/* typography
 		.txtBold 
 		.txtBold-blue
