--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -5,12 +5,18 @@ lpc-directive {
 	flex-flow: column;
 }
 
-#lpc-canvas { /* This is the THREEjs element*/
+// This is the THREEjs element. 
+// Its H & W should be determined by its parent ele.
+#lpc-canvas { 
 	width: 100%;
 	height: 100%;
 	margin: auto;
 	z-index: 10;
 	border: 1px solid red;
+}
+
+#lpc-canvas-parentSize {  // #hc just testing
+	border: 2px solid yellow;
 }
 
 .lpcCanvasSize-big { // not working
