--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -889,12 +889,14 @@ lpc-directive {
   flex-flow: column; }
 
 #lpc-canvas {
-  /* This is the THREEjs element*/
   width: 100%;
   height: 100%;
   margin: auto;
   z-index: 10;
   border: 1px solid red; }
+
+#lpc-canvas-parentSize {
+  border: 2px solid yellow; }
 
 .lpcCanvasSize-big {
   border: 1px solid lime; }
