--- a/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
+++ b/staRt/www/common-components/lpc-directive/_lpc-directive_styles.scss
@@ -12,11 +12,11 @@ lpc-directive {
 	height: 100%;
 	margin: auto;
 	z-index: 10;
-	border: 1px solid red;
+	//border: 1px solid red;
 }
 
 #lpc-canvas-parentSize {  // #hc just testing
-	border: 2px solid yellow;
+	//border: 2px solid yellow;
 }
 
 .lpcCanvasSize-big { // not working
