--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -802,21 +802,32 @@ button.tutBtn, a.tutBtn {
   align-self: flex-start;
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 0px 10px;
   height: 100%;
-  z-index: 25;
-  border: 1px solid white; }
+  width: 160px;
+  color: #4d4d4d;
+  border-top-color: #FFECCB;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  z-index: 25; }
 
-.sandbar-coinImgBox {
+div.sandbar-coinImgBox {
   height: 60px;
-  width: auto;
-  border: 1px solid aqua; }
+  align-items: center;
+  width: 100px; }
+
+.sandbar-coinImg {
+  position: relative; }
+
+.sandbar-coinImg--incomplete {
+  opacity: 0; }
 
 .sandbar-coinTxt {
-  margin-top: 5px; }
+  margin-top: 0px; }
 
 .activeCoin {
-  color: red;
+  color: #018B9D;
   font-weight: bold; }
 
 /* typography
@@ -840,7 +851,8 @@ button.tutBtn, a.tutBtn {
 
 .numbBub--white {
   color: #4d4d4d;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  border: 1px solid #d3d3d3;
+  padding: 5px 15px;
   background-color: white; }
 
 .txt-boldBlueDark--try {
@@ -850,6 +862,16 @@ button.tutBtn, a.tutBtn {
 
 .txt-squish {
   line-height: 1.5em; }
+
+.p02s1-lr2-p2 {
+  position: absolute;
+  margin-left: 125px;
+  margin-top: 0.25em; }
+
+.p02s1-lr2-p3 {
+  position: absolute;
+  margin-left: 250px;
+  margin-top: 2.75em; }
 
 .p05s5img {
   padding: 15px; }
@@ -892,11 +914,7 @@ lpc-directive {
   width: 100%;
   height: 100%;
   margin: auto;
-  z-index: 10;
-  border: 1px solid red; }
-
-#lpc-canvas-parentSize {
-  border: 2px solid yellow; }
+  z-index: 10; }
 
 .lpcCanvasSize-big {
   border: 1px solid lime; }
