--- a/staRt/www/states/root/tutorial/partialStyles/_sandbar.scss
+++ b/staRt/www/states/root/tutorial/partialStyles/_sandbar.scss
@@ -29,29 +29,49 @@
 	align-self: flex-start;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	padding: 0px 10px;
 	height: 100%;
+	width: 160px;
 
+	color: $grey-txtMain; //$blue-light; $blue-main; //$yellow-main:
+	
+	//border: 1px solid $yellow-main;
+	//border-color: rgba(0,0,0,0.05);
+	border-top-color: $yellow-light;
+	border-radius: 0 0 4px 4px;
+	box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+	//box-shadow: $itemInset;
 	z-index: 25;
-	border: 1px solid white;
 }
 
-.sandbar-coinImgBox {
+div.sandbar-coinImgBox {
 	height: 60px; //64%; //64%; //100%; //
+	align-items: center;
 	// height: $rowHalf; //		#hc need a var for nav icon size
-	width: auto;
-	border: 1px solid aqua;
+	width: 100px;
+	//min-width: 85px;
+	//border: 1px solid tan;
 }
 
 .sandbar-coinImg {
+	position: relative;
+	//width: 50%;
+	//border: 1px solid pink;
 
+}
+
+.sandbar-coinImg--incomplete {
+	opacity: 0;
 }
 
 .sandbar-coinTxt {
-	margin-top: 5px;
+	margin-top: 0px; 
+	//font-weight: bold;
+
 }
 
 .activeCoin {
-	color: red;
+	color: $blue-dark;
 	font-weight: bold;
 }
