state save before Sam call to fix xCode

--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -818,10 +818,11 @@ div.sandbar-coinImgBox {
   width: 100px; }
 
 .sandbar-coinImg {
-  position: relative; }
-
-.sandbar-coinImg--incomplete {
+  position: relative;
   opacity: 0; }
+
+.sandbar-coinImg--complete {
+  opacity: 1; }
 
 .sandbar-coinTxt {
   margin-top: 0px; }
