--- a/staRt/www/states/root/tutorial/partialStyles/_sandbar.scss
+++ b/staRt/www/states/root/tutorial/partialStyles/_sandbar.scss
@@ -34,14 +34,10 @@
 	height: 100%;
 	width: 160px;
 
-	color: $grey-txtMain; //$blue-light; $blue-main; //$yellow-main:
-	
-	//border: 1px solid $yellow-main;
-	//border-color: rgba(0,0,0,0.05);
+	color: $grey-txtMain;
 	border-top-color: $yellow-light;
 	border-radius: 0 0 4px 4px;
 	box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
-	//box-shadow: $itemInset;
 	z-index: 25;
 }
 
@@ -50,20 +46,7 @@ div.sandbar-coinImgBox {
 	align-items: center;
 	// height: $rowHalf; //		#hc need a var for nav icon size
 	width: 100px;
-	//min-width: 85px;
 	//border: 1px solid tan;
-}
-
-.sandbar-coinImg {
-	position: relative;
-	opacity: 0;
-	//width: 50%;
-	//border: 1px solid pink;
-
-}
-
-.sandbar-coinImg--complete {
-	opacity: 1;
 }
 
 .sandbar-coinTxt {
